fixing horizontal scroll

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -166,7 +166,6 @@ body {
 .header .header__section2 {
   display: flex;
   gap: 2rem;
-  justify-content: center;
   overflow: auto;
 }
 .header .header__section2 .header__section2-card {
