--- a/sass/components/header/_header.scss
+++ b/sass/components/header/_header.scss
@@ -40,7 +40,7 @@
     .header__section2 {
         display: flex;
         gap: 2rem;
-        justify-content: center;
+       // justify-content: center;
         overflow: auto;
         
         .header__section2-card {
